--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "silex/silex": "~1.1",
-        "twig/twig": "dev-master",
+        "twig/twig": "1.*",
         "symfony/twig-bridge": "~2.3"
     }
 }
