--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "silex/silex": "~1.1",
         "twig/twig": "1.*",
-        "symfony/twig-bridge": "~2.3"
+        "symfony/twig-bridge": "~2.3",
+        "jbinfo/mobile-detect-service-provider": "~1"
     }
 }
