--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "silex/silex": "~1.1",
+        "silex/silex": "1.1",
         "twig/twig": "1.*",
         "symfony/twig-bridge": "~2.3",
         "jbinfo/mobile-detect-service-provider": "~1"
